--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
-}
+ *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ body{
+  background-image: url(assets/wallpaper\ 2.webp);
+  background-repeat: no-repeat;
+  
+  
+ }
+ .container{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  align-items: center;
+  height: 100vh;
+ }
+ 
+ .input{
+  height: 35px;
+  border-radius: 9px;
+  max-width: 300px;
+  width: 100%;
+  margin: 24px;
+  outline: none;
+  border: 2px solid #b2b3b1;
+ }
